--- a/EIFEL.html
+++ b/EIFEL.html
@@ -5,8 +5,10 @@
     <title>Échelle d’Incapacité Fonctionnelle pour L’Évaluation des Lombalgies</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <script type="text/javascript" src="script_amor.js"></script>
     <link rel="stylesheet" href="style_common.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body class="scorebody">
@@ -44,193 +46,193 @@
 
         <tr>
             <td>
-                <label class="containerCb">1 - Je reste pratiquement tout le temps à cause de mon dos
+                <label class="flex-row mb10">
                     <input name="vItem1" id="vItem1" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>1 - Je reste pratiquement tout le temps à cause de mon dos</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">2 - Je change souvent de position pour soulager mon dos
+                <label class="flex-row mb10">
                     <input name="vItem2" id="vItem2" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>2 - Je change souvent de position pour soulager mon dos</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">3 - Je marche plus lentement que d’habitude à cause de mon dos
+                <label class="flex-row mb10">
                     <input name="vItem3" id="vItem3" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>3 - Je marche plus lentement que d’habitude à cause de mon dos</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">4 - A cause de mon dos, je n’effectue aucune tâche que j’ai l’habitude de faire à la maison
+                <label class="flex-row mb10">
                     <input name="vItem4" id="vItem4" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>4 - A cause de mon dos, je n’effectue aucune tâche que j’ai l’habitude de faire à la maison</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb"> 5 - A cause de mon dos, je m’aide de la rampe pour monter les escaliers
+                <label class="flex-row mb10">
                     <input name="vItem5" id="vItem5" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>5 - A cause de mon dos, je m’aide de la rampe pour monter les escaliers</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">6 - A cause de mon dos, je m’allonge plus souvent pour me reposer
+                <label class="flex-row mb10">
                     <input name="vItem6" id="vItem6" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>6 - A cause de mon dos, je m’allonge plus souvent pour me reposer</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">7 - A cause de mon dos, je suis obligé(e) de prendre un appui pour sortir d’un fauteuil
+                <label class="flex-row mb10">
                     <input name="vItem7" id="vItem7" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>7 - A cause de mon dos, je suis obligé(e) de prendre un appui pour sortir d’un fauteuil</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb"> 8 - A cause de mon dos, j’essaie d’obtenir que d’autres fassent des choses à ma place
+                <label class="flex-row mb10">
                     <input name="vItem8" id="vItem8" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>8 - A cause de mon dos, j’essaie d’obtenir que d’autres fassent des choses à ma place</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">9 - A cause de mon dos, je m’habille plus lentement que d’habitude
+                <label class="flex-row mb10">
                     <input name="vItem9" id="vItem9" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>9 - A cause de mon dos, je m’habille plus lentement que d’habitude</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">10 - Je ne reste debout que de courts moments à cause de mon dos
+                <label class="flex-row mb10">
                     <input name="vItem10" id="vItem10" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>10 - Je ne reste debout que de courts moments à cause de mon dos</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">11 - A cause de mon dos, j’essaie de ne pas me baisser ni de m’agenouiller
+                <label class="flex-row mb10">
                     <input name="vItem11" id="vItem11" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>11 - A cause de mon dos, j’essaie de ne pas me baisser ni de m’agenouiller</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">12 - A cause de mon dos, j’ai du mal à me lever d’une chaise
+                <label class="flex-row mb10">
                     <input name="vItem12" id="vItem12" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>12 - A cause de mon dos, j’ai du mal à me lever d’une chaise</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">13 - J’ai mal au dos la plupart du temps
+                <label class="flex-row mb10">
                     <input name="vItem13" id="vItem13" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>13 - J’ai mal au dos la plupart du temps</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">14 - A cause de mon dos, j’ai des difficultés à me retourner dans mon lit.
+                <label class="flex-row mb10">
                     <input name="vItem14" id="vItem14" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>14 - A cause de mon dos, j’ai des difficultés à me retourner dans mon lit.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">15 - J’ai moins d’appétit à cause de mon mal de dos
+                <label class="flex-row mb10">
                     <input name="vItem15" id="vItem15" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>15 - J’ai moins d’appétit à cause de mon mal de dos</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">16 - A cause de mon mal de dos, j’ai du mal à mettre mes chaussettes (ou bas/collants)
+                <label class="flex-row mb10">
                     <input name="vItem16" id="vItem16" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>16 - A cause de mon mal de dos, j’ai du mal à mettre mes chaussettes (ou bas/collants)</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">17 - Je ne peux marcher que sur de courtes distances à cause de mon mal de dos
+                <label class="flex-row mb10">
                     <input name="vItem17" id="vItem17" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>17 - Je ne peux marcher que sur de courtes distances à cause de mon mal de dos</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">18 - Je dors moins à cause de mon mal de dos
+                <label class="flex-row mb10">
                     <input name="vItem18" id="vItem18" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>18 - Je dors moins à cause de mon mal de dos</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">19 - A cause de mon dos, quelqu’un m’aide pour m’habiller
+                <label class="flex-row mb10">
                     <input name="vItem19" id="vItem19" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>19 - A cause de mon dos, quelqu’un m’aide pour m’habiller</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">20 - A cause de mon dos, je reste assis(e) la plus grande partie de la journée
+                <label class="flex-row mb10">
                     <input name="vItem20" id="vItem20" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>20 - A cause de mon dos, je reste assis(e) la plus grande partie de la journée</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">21 - A cause de mon dos, j’évite de faire de gros travaux à la maison
+                <label class="flex-row mb10">
                     <input name="vItem21" id="vItem21" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>21 - A cause de mon dos, j’évite de faire de gros travaux à la maison</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">22 - A cause de mon mal de dos, je suis plus irritable que d’habitude et de mauvaise humeur avec les gens.
+                <label class="flex-row mb10">
                     <input name="vItem22" id="vItem22" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>22 - A cause de mon mal de dos, je suis plus irritable que d’habitude et de mauvaise humeur avec les gens.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">23 - A cause de mon dos, je monte les escaliers plus lentement que d’habitude
+                <label class="flex-row mb10">
                     <input name="vItem23" id="vItem23" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>23 - A cause de mon dos, je monte les escaliers plus lentement que d’habitude</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">24 - A cause de mon dos, je reste au lit la plupart du temps
+                <label class="flex-row mb10">
                     <input name="vItem24" id="vItem24" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>24 - A cause de mon dos, je reste au lit la plupart du temps</span>
                 </label>
             </td>
         </tr>
@@ -238,13 +240,18 @@
     <br />
 
     <div class="score_result">
-        Score
+        <h2>Score</h2>
         <input name="Resultat" type="text" id="Resultat" style="" disabled readonly="readonly" />
         <span id="score_result_confirm">/24</span>
     </div>
 
 </form>
-
+<br>
+<br>
+<div class="export">
+    <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+</div>
+<br>
 
 <div class="score_inter">Interprétation</div>
 <span class="description">Plus le score est élevé, plus le retentissement du mal de dos est important.</span>
