--- a/SLEDAI.html
+++ b/SLEDAI.html
@@ -5,8 +5,10 @@
     <title>Systemic Lupus Erythematosus Disease Activity Index (SLEDAI)</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <script type="text/javascript" src="script_amor.js"></script>
     <link rel="stylesheet" href="style_common.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body class="scorebody">
@@ -37,185 +39,185 @@
     <table border="0" align="center" cellpadding="2" cellspacing="0">
         <tr>
             <td>
-                <label class="containerCb">8 - <b>Convulsion</b> Apparition récente. Exclusion des causes métaboliques, infectieuses ou médicamenteuses
+                <label class="flex-row mb10">
                     <input name="vItem1" id="vItem1" type="checkbox" value="8" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>8 - <b>Convulsion</b> Apparition récente. Exclusion des causes métaboliques, infectieuses ou médicamenteuses</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">8 - <b>Psychose</b> Perturbation de l’activité normale en rapport avec une altération sévère de la perception de la réalité. Comprend : hallucinations, incohérence, appauvrissement du contenu de la pensée, raisonnement illogique, comportement bizarre, désorganisé ou catatonique. Exclusion d’une insuffisance rénale ou d’une cause médicamenteuse
+                <label class="flex-row mb10">
                     <input name="vItem2" id="vItem2" type="checkbox" value="8" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>8 - <b>Psychose</b> Perturbation de l’activité normale en rapport avec une altération sévère de la perception de la réalité. Comprend : hallucinations, incohérence, appauvrissement du contenu de la pensée, raisonnement illogique, comportement bizarre, désorganisé ou catatonique. Exclusion d’une insuffisance rénale ou d’une cause médicamenteuse</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">8 - <b>Atteinte cérébrale</b> Altération des fonctions mentales avec troubles de l’orientation, de la mémoire ou autre d’apparition brutale et d’évolution fluctuante. Comprend : troubles de la conscience avec réduction des capacités de concentration, incapacité à rester attentif avec en plus 2 au moins des manifestations suivantes : troubles perceptifs, discours incohérent, insomnie ou somnolence diurne, augmentation ou diminution de l’activité psychomotrice.
+                <label class="flex-row mb10">
                     <input name="vItem3" id="vItem3" type="checkbox" value="8" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>8 - <b>Atteinte cérébrale</b> Altération des fonctions mentales avec troubles de l’orientation, de la mémoire ou autre d’apparition brutale et d’évolution fluctuante. Comprend : troubles de la conscience avec réduction des capacités de concentration, incapacité à rester attentif avec en plus 2 au moins des manifestations suivantes : troubles perceptifs, discours incohérent, insomnie ou somnolence diurne, augmentation ou diminution de l’activité psychomotrice.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">8 - <b>Troubles visuels</b> Atteinte rétinienne du lupus. Comprend : nodules dysoriques, hémorragies rétiniennes, exsudats séreux ou hémorragies choroïdiennes, névrite optique. Exclusion d’une cause hypertensive, infectieuse ou médicamenteuse.
+                <label class="flex-row mb10">
                     <input name="vItem4" id="vItem4" type="checkbox" value="8" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>8 - <b>Troubles visuels</b> Atteinte rétinienne du lupus. Comprend : nodules dysoriques, hémorragies rétiniennes, exsudats séreux ou hémorragies choroïdiennes, névrite optique. Exclusion d’une cause hypertensive, infectieuse ou médicamenteuse.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">8 - <b>Nerfs crâniens</b> Neuropathie sensitive ou motrice d’apparition récente touchant un nerf crânien.
+                <label class="flex-row mb10">
                     <input name="vItem5" id="vItem5" type="checkbox" value="8" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>8 - <b>Nerfs crâniens</b> Neuropathie sensitive ou motrice d’apparition récente touchant un nerf crânien.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">8 - <b>Céphalées</b> Céphalées sévères et persistantes, pouvant être migraineuses mais résistant aux antalgiques majeurs.
+                <label class="flex-row mb10">
                     <input name="vItem6" id="vItem6" type="checkbox" value="8" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>8 - <b>Céphalées</b> Céphalées sévères et persistantes, pouvant être migraineuses mais résistant aux antalgiques majeurs.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">8 - <b>AVC</b> Accident vasculaire cérébral d’apparition récente. Artériosclérose exclue.
+                <label class="flex-row mb10">
                     <input name="vItem7" id="vItem7" type="checkbox" value="8" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>8 - <b>AVC</b> Accident vasculaire cérébral d’apparition récente. Artériosclérose exclue.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">8 - <b>Vascularite</b> Doigt ou orteil &laquo;&nbsp;en saucisse&nbsp;&raquo;.
+                <label class="flex-row mb10">
                     <input name="vItem8" id="vItem8" type="checkbox" value="8" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>8 - <b>Vascularite</b> Doigt ou orteil &laquo;&nbsp;en saucisse&nbsp;&raquo;.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">4 - <b>Arthrites</b> Plus de 2 articulations douloureuses avec des signes inflammatoires locaux (douleur, tuméfaction ou épanchement articulaire).
+                <label class="flex-row mb10">
                     <input name="vItem9" id="vItem9" type="checkbox" value="4" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>4 - <b>Arthrites</b> Plus de 2 articulations douloureuses avec des signes inflammatoires locaux (douleur, tuméfaction ou épanchement articulaire).</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">4 - <b>Myosite</b> Douleur/faiblesse musculaire proximale associées à une élévation des CPK et/ou aldolases ou à des modifications électromyographiques ou à une biopsie montrant des signes de vascularite.
+                <label class="flex-row mb10">
                     <input name="vItem10" id="vItem10" type="checkbox" value="4" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>4 - <b>Myosite</b> Douleur/faiblesse musculaire proximale associées à une élévation des CPK et/ou aldolases ou à des modifications électromyographiques ou à une biopsie montrant des signes de vascularite.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">4 - <b>Cylindres urinaires</b> Cylindres de globules rouges.
+                <label class="flex-row mb10">
                     <input name="vItem11" id="vItem11" type="checkbox" value="4" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>4 - <b>Cylindres urinaires</b> Cylindres de globules rouges.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">4 - <b>Hématurie</b> &gt; 5 GR / champ en l’absence de lithiase, d’infection ou d’une autre cause.
+                <label class="flex-row mb10">
                     <input name="vItem12" id="vItem12" type="checkbox" value="4" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>4 - <b>Hématurie</b> &gt; 5 GR / champ en l’absence de lithiase, d’infection ou d’une autre cause.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">4 - <b>Protéinurie</b> &gt; 0,5 g/24h. Apparition récente ou majoration récente de plus de 0,5g/24h.
+                <label class="flex-row mb10">
                     <input name="vItem13" id="vItem13" type="checkbox" value="4" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>4 - <b>Protéinurie</b> &gt; 0,5 g/24h. Apparition récente ou majoration récente de plus de 0,5g/24h.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">4 - <b>Pyurie</b> &gt; 5 GB/champ en l’absence d’infection.
+                <label class="flex-row mb10">
                     <input name="vItem14" id="vItem14" type="checkbox" value="4" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>4 - <b>Pyurie</b> &gt; 5 GB/champ en l’absence d’infection.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">2 - <b>Alopécie</b> Apparition récente ou récidive d’une alopécie en plaque ou diffuse.
+                <label class="flex-row mb10">
                     <input name="vItem15" id="vItem15" type="checkbox" value="2" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>2 - <b>Alopécie</b> Apparition récente ou récidive d’une alopécie en plaque ou diffuse.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">2 - <b>Ulcères muqueux</b> Apparition récente ou récidive d’ulcérations orales ou nasales.
+                <label class="flex-row mb10">
                     <input name="vItem16" id="vItem16" type="checkbox" value="2" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>2 - <b>Ulcères muqueux</b> Apparition récente ou récidive d’ulcérations orales ou nasales.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">2 - <b>Pleurésie</b> Douleur thoracique d’origine pleurale avec frottement ou épanchement ou épaississement pleural.
+                <label class="flex-row mb10">
                     <input name="vItem17" id="vItem17" type="checkbox" value="2" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>2 - <b>Pleurésie</b> Douleur thoracique d’origine pleurale avec frottement ou épanchement ou épaississement pleural.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">2 - <b>Péricardite</b> Douleur péricardique avec au moins l’une des manifestations suivantes : frottement, épanchement ou confirmation électrographique ou échographique.
+                <label class="flex-row mb10">
                     <input name="vItem18" id="vItem18" type="checkbox" value="2" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>2 - <b>Péricardite</b> Douleur péricardique avec au moins l’une des manifestations suivantes : frottement, épanchement ou confirmation électrographique ou échographique.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">2 - <b>Complément</b> Diminution du CH50, du C3ou du C4 &lt; à la normale inférieure du laboratoire.
+                <label class="flex-row mb10">
                     <input name="vItem19" id="vItem19" type="checkbox" value="2" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>2 - <b>Complément</b> Diminution du CH50, du C3ou du C4 &lt; à la normale inférieure du laboratoire.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">2 - <b>Anti-ADN</b> Positivité &gt; à 25% par le test de Farr ou taux &gt; à la normale du laboratoire.
+                <label class="flex-row mb10">
                     <input name="vItem20" id="vItem20" type="checkbox" value="2" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>2 - <b>Anti-ADN</b> Positivité &gt; à 25% par le test de Farr ou taux &gt; à la normale du laboratoire.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">1 - <b>Fièvre</b> &gt;38° en l’absence de cause infectieuse.
+                <label class="flex-row mb10">
                     <input name="vItem21" id="vItem21" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>1 - <b>Fièvre</b> &gt;38° en l’absence de cause infectieuse.</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">1 - <b>Thrombopénie</b> &lt; 100 000 plaquettes/mm3
+                <label class="flex-row mb10">
                     <input name="vItem22" id="vItem22" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>1 - <b>Thrombopénie</b> &lt; 100 000 plaquettes/mm3</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">1 - <b>Leucopénie</b> &gt; 3 000 GB/mm3 en l’absence de cause médicamenteuse.
+                <label class="flex-row mb10">
                     <input name="vItem23" id="vItem23" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>1 - <b>Leucopénie</b> &gt; 3 000 GB/mm3 en l’absence de cause médicamenteuse.</span>
                 </label>
             </td>
         </tr>
@@ -229,6 +231,12 @@
     </div>
 
 </form>
+
+<br>
+<br>
+<div class="export">
+    <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+</div>
 
 <div class="score_ref">Références</div>
 <span class="description">Bombardier C., Gladmann D.D., Urowitz M.B., Caron D., Chang C.H., and the Committee on prognosis studies in SLE – Derivation of the SLEDAI : a disease activity index for lupus patients. Arthritis Rheum., 1992, 35, 630-640.</span>
