--- a/lequesne-hanche.html
+++ b/lequesne-hanche.html
@@ -22,104 +22,104 @@
             <strong><span class="blue">DOULEUR</span></strong><br><br>
             <div class="flex-column">
                 <strong>Nocturne</strong><br>
-                <label class="containerRadio">
-                    <input class="input" name="g1" id="vItem1" type="radio" value="0" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>0 - Aucune
+                <label class="flex-row">
+                    <input name="g1" id="vItem1" type="radio" value="0" onclick="Calculate()" />
+                    <label for="vItem1">0 - Aucune</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g1" id="vItem2" type="radio" value="1" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>1 - Seulement aux mouvements et dans certaines postures
+                <label class="flex-row">
+                    <input name="g1" id="vItem2" type="radio" value="1" onclick="Calculate()" />
+                    <label for="vItem2">1 - Seulement aux mouvements et dans certaines postures</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g1" id="vItem3" type="radio" value="2" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>2 - Même immobile, sans bouger
+                <label class="flex-row">
+                    <input name="g1" id="vItem3" type="radio" value="2" onclick="Calculate()" />
+                    <label for="vItem3">2 - Même immobile, sans bouger</label>
                 </label>
                 <br>
                 <strong>Dérouillage matinal</strong><br>
-                <label class="containerRadio">
-                    <input class="input" name="g2" id="vItem4" type="radio" value="0" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>0 - Aucun ou inférieur à 1 minute
+                <label class="flex-row">
+                    <input name="g2" id="vItem4" type="radio" value="0" onclick="Calculate()" />
+                    <label for="vItem4">0 - Aucun ou inférieur à 1 minute</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g2" id="vItem5" type="radio" value="1" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>1 - Entre 1 et 15 minutes
+                <label class="flex-row">
+                    <input name="g2" id="vItem5" type="radio" value="1" onclick="Calculate()" />
+                    <label for="vItem5">1 - Entre 1 et 15 minutes</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g2" id="vItem6" type="radio" value="2" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>2 - Plus d’un quart d’heure
+                <label class="flex-row">
+                    <input name="g2" id="vItem6" type="radio" value="2" onclick="Calculate()" />
+                    <label for="vItem6">2 - Plus d’un quart d’heure</label>
                 </label>
                 <br>
                 <strong>Rester debout ou piétiner sur place 1/2 heure augmente-t-il la douleur ? </strong><br>
-                <label class="containerRadio">
-                    <input class="input" name="g3" id="vItem7" type="radio" value="0" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>0 - Non
+                <label class="flex-row">
+                    <input name="g3" id="vItem7" type="radio" value="0" onclick="Calculate()" />
+                    <label for="vItem7">0 - Non</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g3" id="vItem8" type="radio" value="1" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>1 - Oui
+                <label class="flex-row">
+                    <input name="g3" id="vItem8" type="radio" value="1" onclick="Calculate()" />
+                    <label for="vItem8">1 - Oui</label>
                 </label>
                 <br>
                 <strong>Douleur à la marche </strong><br>
-                <label class="containerRadio">
-                    <input class="input" name="g4" id="vItem9" type="radio" value="0" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>0 - Non
+                <label class="flex-row">
+                    <input name="g4" id="vItem9" type="radio" value="0" onclick="Calculate()" />
+                    <label for="vItem9">0 - Non</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g4" id="vItem10" type="radio" value="1" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>1 - Seulement après quelque distance
+                <label class="flex-row">
+                    <input name="g4" id="vItem10" type="radio" value="1" onclick="Calculate()" />
+                    <label for="vItem10">1 - Seulement après quelque distance</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g4" id="vItem11" type="radio" value="2" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>2 - Dès le début de la marche et de façon croissante
+                <label class="flex-row">
+                    <input name="g4" id="vItem11" type="radio" value="2" onclick="Calculate()" />
+                    <label for="vItem11">2 - Dès le début de la marche et de façon croissante</label>
                 </label>
                 <br>
                 <strong><span class="blue">Pouvez-vous vous relever d’un siège sans l’aide des bras ?</span></strong><br>
-                <label class="containerRadio">
-                    <input class="input" name="g5" id="vItem12" type="radio" value="0" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>0 - Non
+                <label class="flex-row">
+                    <input name="g5" id="vItem12" type="radio" value="0" onclick="Calculate()" />
+                    <label for="vItem12">0 - Non</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g5" id="vItem13" type="radio" value="1" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>1 - Oui
+                <label class="flex-row">
+                    <input name="g5" id="vItem13" type="radio" value="1" onclick="Calculate()" />
+                    <label for="vItem13">1 - Oui</label>
                 </label>
                 <br>
                 <strong>PERIMETRE DE MARCHE (quelle que soit la douleur)</strong><br>
-                <label class="containerRadio">
-                    <input class="input" name="g6" id="vItem14" type="radio" value="0" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>0 - Illimité
+                <label class="flex-row">
+                    <input name="g6" id="vItem14" type="radio" value="0" onclick="Calculate()" />
+                    <label for="vItem9">0 - Illimité</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g6" id="vItem15" type="radio" value="1" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>1 - Limité mais supérieur à 1 km
+                <label class="flex-row">
+                    <input name="g6" id="vItem15" type="radio" value="1" onclick="Calculate()" />
+                    <label for="vItem15">1 - Limité mais supérieur à 1 km</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g6" id="vItem16" type="radio" value="2" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>2 - Environ 1 km (environ 15 minutes)
+                <label class="flex-row">
+                    <input name="g6" id="vItem16" type="radio" value="2" onclick="Calculate()" />
+                    <label for="vItem16">2 - Environ 1 km (environ 15 minutes)</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g6" id="vItem17" type="radio" value="3" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>3 - 500 à 900 mètres (environ 8 à 15 minutes)
+                <label class="flex-row">
+                    <input name="g6" id="vItem17" type="radio" value="3" onclick="Calculate()" />
+                    <label for="vItem17">3 - 500 à 900 mètres (environ 8 à 15 minutes)</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g6" id="vItem18" type="radio" value="4" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>4 - 300 à 500 mètres
+                <label class="flex-row">
+                    <input name="g6" id="vItem18" type="radio" value="4" onclick="Calculate()" />
+                    <label for="vItem18">4 - 300 à 500 mètres</label>
                 </label>
-                <label class="containerRadio">
-                    <input class="input" name="g6" id="vItem19" type="radio" value="5" onclick="Calculate()" />
-                    <span class="checkmarkRadio"></span>5 - 100 à 300 mètres
+                <label class="flex-row">
+                    <input name="g6" id="vItem19" type="radio" value="5" onclick="Calculate()" />
+                    <label for="vItem19">5 - 100 à 300 mètres</label>
                 </label>
-                <div>
-                    <label class="containerCb">+1 - Une canne ou une béquille est nécessaire
-                        <input class="input" name="g6bis" id="vItem20" type="checkbox" value="1" onclick="Calculate()">
-                        <span class="checkmarkCb"></span>
-                    </label>
-                </div>
-                <div>
-                    <label class="containerCb">+2 - Deux cannes ou deux béquilles sont nécessaires
-                        <input class="input" name="g6bis" id="vItem21" type="checkbox" value="2" onclick="Calculate()">
-                        <span class="checkmarkCb"></span>
-                    </label>
-                </div>
+
+                <label class="flex-row">
+                    <input name="g6bis" id="vItem20" type="checkbox" value="1" onclick="Calculate()">
+                    <span>+1 - Une canne ou une béquille est nécessaire</span>
+                </label>
+
+
+                <label class="flex-row">
+                    <input name="g6bis" id="vItem21" type="checkbox" value="2" onclick="Calculate()">
+                    <span>+2 - Deux cannes ou deux béquilles sont nécessaires</span>
+                </label>
+
                 <br>
                 <strong><span class="blue">AUTRES DIFFICULTÉS DE LA VIE QUOTIDIENNE</span></strong><br>
                 <div class="formfield-select">
@@ -184,6 +184,13 @@
                 <label for="total"></label>
                 <input class="input margin0" name="total" type="number" id="total" disabled/>
             </div>
+
+            <br>
+            <div class="export">
+                <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+            </div>
+            <br>
+
             <h4>Si l'indice est ≥ à 10-12, une prothèse peut être envisagée</h4>
             <div class="cadre">
                 <p><span class="italic"><strong>Cotation :</strong><br>
