--- a/acr_1997.html
+++ b/acr_1997.html
@@ -5,8 +5,10 @@
     <title>Critères de classification ACR 1982, mis à jour en 1997</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <script type="text/javascript" src="script_amor.js"></script>
     <link rel="stylesheet" href="style_common.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body class="scorebody">
@@ -18,89 +20,89 @@
     <table border="0" align="center" cellpadding="2" cellspacing="0">
         <tr>
             <td>
-                <label class="containerCb">Rash malaire
-                    <input name="vItem1" id="vItem1" type="checkbox" value="1" onclick="f_Calculer()" >
-                    <span class="checkmarkCb"></span>
+                <label class="flex-row">
+                    <input name="vItem1" id="vItem1" type="checkbox" value="1" onclick="f_Calculer()">
+                    <span>Rash malaire</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Lupus discoïde
-                    <input name="vItem2" id="vItem2" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                <label class="flex-row">
+                    <input name="vItem2" id="vItem2" type="checkbox" value="1" onclick="f_Calculer()">
+                    <span>Lupus discoïde</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Photosensibilité
-                    <input name="vItem3" id="vItem3" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                <label class="flex-row">
+                    <input name="vItem3" id="vItem3" type="checkbox" value="1" onclick="f_Calculer()">
+                    <span>Photosensibilité</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Ulcérations orales ou nasopharyngées
-                    <input name="vItem4" id="vItem4" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                <label class="flex-row">
+                    <input name="vItem4" id="vItem4" type="checkbox" value="1" onclick="f_Calculer()">
+                    <span>Ulcérations orales ou nasopharyngées</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Arthrites non érosives touchant au moins 2 articulations périphériques, caractérisées par une douleur, un gonflement ou un épanchement
-                    <input name="vItem5" id="vItem5" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                <label class="flex-row">
+                    <input name="vItem5" id="vItem5" type="checkbox" value="1" onclick="f_Calculer()">
+                    <span>Arthrites non érosives touchant au moins 2 articulations périphériques, caractérisées par une douleur, un gonflement ou un épanchement</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Pleurésie ou péricardite
-                    <input name="vItem6" id="vItem6" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                <label class="flex-row">
+                    <input name="vItem6" id="vItem6" type="checkbox" value="1" onclick="f_Calculer()">
+                    <span>Pleurésie ou péricardite</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Protéinurie persistante > 0,5 g/j ou cylindrurie
-                    <input name="vItem7" id="vItem7" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                <label class="flex-row">
+                    <input name="vItem7" id="vItem7" type="checkbox" value="1" onclick="f_Calculer()">
+                    <span>Protéinurie persistante > 0,5 g/j ou cylindrurie</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Convulsions ou psychose (en l'absence de cause médicamenteuse ou métabolique)
-                    <input name="vItem8" id="vItem8" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                <label class="flex-row">
+                    <input name="vItem8" id="vItem8" type="checkbox" value="1" onclick="f_Calculer()">
+                    <span>Convulsions ou psychose (en l'absence de cause médicamenteuse ou métabolique)</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Atteinte hématologique: Anémie hémolytique ou Leucopénie < 4000/µL à 2 reprises ou Lymphopénie < 1500/µL à 2 reprises ou Thrombopénie < 100 000/µL en l'absence de drogues cytopéniantes
-                    <input name="vItem9" id="vItem9" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                <label class="flex-row">
+                    <input name="vItem9" id="vItem9" type="checkbox" value="1" onclick="f_Calculer()">
+                    <span>Atteinte hématologique: Anémie hémolytique ou Leucopénie < 4000/µL à 2 reprises ou Lymphopénie < 1500/µL à 2 reprises ou Thrombopénie < 100 000/µL en l'absence de drogues cytopéniantes</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Titre anormal d'anticorps anti-nucléaires par IF (en l'absence de drogues inductrices)
-                    <input name="vItem10" id="vItem10" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                <label class="flex-row">
+                    <input name="vItem10" id="vItem10" type="checkbox" value="1" onclick="f_Calculer()">
+                    <span>Titre anormal d'anticorps anti-nucléaires par IF (en l'absence de drogues inductrices)</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Perturbations immunologiques: titre anormal d'anticorps anti-ADN natif, anticorps anti-Sm ou présence d'anticorps antiphospholipides: sérologie syphilitique dissociée constatée à 2 reprises à 6 mois ou anticoagulant circulant de type lupique ou titre anormal d'anticorps anti-cardiolipine en IgG ou IgM
-                    <input name="vItem11" id="vItem11" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                <label class="flex-row">
+                    <input name="vItem11" id="vItem11" type="checkbox" value="1" onclick="f_Calculer()">
+                    <span>Perturbations immunologiques: titre anormal d'anticorps anti-ADN natif, anticorps anti-Sm ou présence d'anticorps antiphospholipides: sérologie syphilitique dissociée constatée à 2 reprises à 6 mois ou anticoagulant circulant de type lupique ou titre anormal d'anticorps anti-cardiolipine en IgG ou IgM</span>
                 </label>
             </td>
         </tr>
@@ -114,8 +116,12 @@
         <input class="reponse" name="Mot" type="text" id="reponse" disabled readonly="readonly" />
     </div>
 </form>
-
-
+<br>
+<br>
+<div class="export">
+    <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+</div>
+<br>
 <div class="score_inter">Interprétation</div>
 <span class="description">La présence d'au moins 4 des 11 critères permet d'affirmer l'existence d'un lupus systémique avec une sensibilité et une spécificité de 96%.</span>
 
