--- a/asas_peripherique.html
+++ b/asas_peripherique.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SNMR</title>
+    <title>ASAS PÉRIPHÉRIQUE</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link href="style_common.css" rel="stylesheet" type="text/css" />
@@ -14,62 +14,62 @@
 <p class="common_h2">Chez un patient dont l'<span class="bold">âge du diagnostic est < 45 ans</span>, on peut classer sa maladie dans la forme spondylarthrite périphérique si :</p>
 
 <div>
-    <label class="containerCb">Présence d'une Arthrite, Enthésite, ou Dactylite
+    <label class="flex-row">
         <input type="checkbox" id="item1" name="item1" value="item1">
-        <span class="checkmarkCb"></span>
+        <span>Présence d'une Arthrite, Enthésite, ou Dactylite</span>
     </label>
 </div>
 <br><div class="and">ET</div><br>
 <div>
-    <label class="containerRadio">≥ 1 critère A de spondylarthite
+    <label class="flex-row">
         <input type="radio" id="choice1" name="drone" value="choice1">
-        <span class="checkmarkRadio"></span>
+        <label for="choice1">≥ 1 critère A de spondylarthite</label>
     </label>
 </div>
 <br><div class="or">OU</div><br>
 <div>
-    <label class="containerRadio">≥ 2 critères B de spondylarthite
+    <label class="flex-row">
         <input type="radio" id="choice2" name="drone" value="choice2">
-        <span class="checkmarkRadio"></span>
+        <label for="choice1">≥ 2 critères B de spondylarthite</label>
     </label>
 </div>
 
 <br>
 <p class="common_h2">Critères A de spondylarthrite :</p>
 <div>
-    <label class="containerCb">Uvéite
+    <label class="flex-row">
         <input type="checkbox" id="list_item_1" name="list_item_1" value="list_item_1">
-        <span class="checkmarkCb"></span>
+        <span>Uvéite</span>
     </label>
 </div>
 <div>
-    <label class="containerCb">Psoriasis
+    <label class="flex-row">
         <input type="checkbox" id="list_item_2" name="list_item_2" value="list_item_2">
-        <span class="checkmarkCb"></span>
+        <span>Psoriasis</span>
     </label>
 </div>
 <div>
-    <label class="containerCb">Maladie de Crohn / Rectocolite Hémorragique
+    <label class="flex-row">
         <input type="checkbox" id="list_item_3" name="list_item_3" value="list_item_3">
-        <span class="checkmarkCb"></span>
+        <span>Maladie de Crohn / Rectocolite Hémorragique</span>
     </label>
 </div>
 <div>
-    <label class="containerCb">Infection préalable
+    <label class="flex-row">
         <input type="checkbox" id="list_item_4" name="list_item_4" value="list_item_4">
-        <span class="checkmarkCb"></span>
+        <span>Infection préalable</span>
     </label>
 </div>
 <div>
-    <label class="containerCb">HLA-B27 positif
+    <label class="flex-row">
         <input type="checkbox" id="list_item_5" name="list_item_5" value="list_item_5">
-        <span class="checkmarkCb"></span>
+        <span>HLA-B27 positif</span>
     </label>
 </div>
 <div>
-    <label class="containerCb">Sacro-iliite à l'imagerie
+    <label class="flex-row">
         <input type="checkbox" id="list_item_6" name="list_item_6" value="list_item_6">
-        <span class="checkmarkCb"></span>
+        <span>Sacro-iliite à l'imagerie</span>
     </label>
 </div>
 <div class="italic small">
@@ -80,37 +80,39 @@
 <br>
 <p class="common_h2">Critères B de spondylarthrite :</p>
 <div>
-    <label class="containerCb">Arthrite
+    <label class="flex-row">
         <input type="checkbox" id="list_item_7" name="list_item_7" value="list_item_7">
-        <span class="checkmarkCb"></span>
+        <span>Arthrite</span>
     </label>
 </div>
 <div>
-    <label class="containerCb">Enthésite
+    <label class="flex-row">
         <input type="checkbox" id="list_item_8" name="list_item_8" value="list_item_8">
-        <span class="checkmarkCb"></span>
+        <span>Enthésite</span>
     </label>
 </div>
 <div>
-    <label class="containerCb">Dactylite
+    <label class="flex-row">
         <input type="checkbox" id="list_item_9" name="list_item_9" value="list_item_9">
-        <span class="checkmarkCb"></span>
+        <span>Dactylite</span>
     </label>
 </div>
 <div>
-    <label class="containerCb">Lombalgie inflammatoire (présente ou passée)
+    <label class="flex-row">
         <input type="checkbox" id="list_item_10" name="list_item_10" value="list_item_10">
-        <span class="checkmarkCb"></span>
+        <span>Lombalgie inflammatoire (présente ou passée)</span>
     </label>
 </div>
 <div>
-    <label class="containerCb">Antécédent familial de Spondylarthrite
+    <label class="flex-row">
         <input type="checkbox" id="list_item_11" name="list_item_11" value="list_item_11">
-        <span class="checkmarkCb"></span>
+        <span>Antécédent familial de Spondylarthrite</span>
     </label>
 </div>
-
 <br>
+<div class="export">
+    <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+</div>
 <div class="score_inter">Interprétation</div>
 <span class="description">Les critères ASAS (Assessment of SpondyloArthritis international Society) de 2011 permettent de classer une spondylarthrite dans la forme périphérique (sensibilité 77,8%, spécificité 82,2%).</span>
 
