--- a/caspar.html
+++ b/caspar.html
@@ -5,14 +5,21 @@
     <title>RHUMATISME PSORIASIQUE - CRITERES DE CLASSIFICATION CASPAR</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <script type="text/javascript" src="script_amor.js"></script>
     <link rel="stylesheet" href="style_common.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <style>
         .subtitle1{
             font-weight:bold;
+            padding-bottom: 10px;
+            padding-top: 10px;
         }
         .score_result input {
             width:120px;
+        }
+        .flex-row {
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -36,9 +43,9 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Présence d'une atteinte rhumatologique inflammatoire
+                <label class="flex-row">
                     <input name="Crit01" id="Crit01" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>Présence d'une atteinte rhumatologique inflammatoire</span>
                 </label>
             </td>
         </tr>
@@ -47,24 +54,24 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">2 - Lésion psoriasique cutanée ou du scalp diagnostiquée par un médecin à l’examen physique
+                <label class="flex-row">
                     <input name="vItem1" id="vItem1" type="checkbox" value="2" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>2 - Lésion psoriasique cutanée ou du scalp diagnostiquée par un médecin à l’examen physique</span>
                 </label>
             </td>
         <tr>
             <td>
-                <label class="containerCb">1 - Notion de psoriasis selon le patient ou un médecin
+                <label class="flex-row">
                     <input name="vItem2" id="vItem2" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>1 - Notion de psoriasis selon le patient ou un médecin</span>
                 </label>
             </td>
         </tr>
         <tr>
             <td>
-                <label class="containerCb">1 - Antécédent familial de psoriasis au 1er ou 2nd degré
+                <label class="flex-row">
                     <input name="vItem3" id="vItem3" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>1 - Antécédent familial de psoriasis au 1er ou 2nd degré</span>
                 </label>
             </td>
         </tr>
@@ -73,9 +80,9 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">1 - Dystrophie unguéale psoriasique à l’examen clinique : onycholyse, ongles ponctués ou hyperkératose.
+                <label class="flex-row">
                     <input name="vItem4" id="vItem4" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>1 - Dystrophie unguéale psoriasique à l’examen clinique : onycholyse, ongles ponctués ou hyperkératose.</span>
                 </label>
             </td>
         </tr>
@@ -86,9 +93,9 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">1 - Absence de FR sérique (ELISA ou néphélométrie)
+                <label class="flex-row">
                     <input name="vItem5" id="vItem5" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>1 - Absence de FR sérique (ELISA ou néphélométrie)</span>
                 </label>
             </td>
         </tr>
@@ -99,18 +106,18 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">1 - Dactylite actuelle diagnostiquée par un médecin
+                <label class="flex-row">
                     <input name="vItem6" id="vItem6" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>1 - Dactylite actuelle diagnostiquée par un médecin</span>
                 </label>
             </td>
         </tr>
 
         <tr>
             <td>
-                <label class="containerCb">1 - Antécédent de dactylite constatée par un médecin
+                <label class="flex-row">
                     <input name="vItem7" id="vItem7" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>1 - Antécédent de dactylite constatée par un médecin</span>
                 </label>
             </td>
         </tr>
@@ -121,9 +128,9 @@
 
         <tr>
             <td>
-                <label class="containerCb">1 - Présence de signes radiographiques de construction osseuse juxta-articulaire (radiographies des mains et des pieds)
+                <label class="flex-row">
                     <input name="vItem8" id="vItem8" type="checkbox" value="1" onclick="f_Calculer()" />
-                    <span class="checkmarkCb"></span>
+                    <span>1 - Présence de signes radiographiques de construction osseuse juxta-articulaire (radiographies des mains et des pieds)</span>
                 </label>
             </td>
         </tr>
@@ -138,7 +145,11 @@
     </div>
 
 </form>
-
+<br>
+<div class="export">
+    <btn title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</btn>
+</div>
+<br>
 <div class="score_ref">Références</div>
 
 <span class="description">Taylor W, Gladman D, Helliwel P et al. Arthr & Rheum 2006; 54: 2665-73</span>
